<resources>
    <string name="app_name">晴天公交(珠海)</string>
    <string name="title_home">实时公交</string>
    <string name="route">路线</string>
    <string name="discovery">发现</string>
    <string name="title_notifications">设置</string>

    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="update">版本更新</string>
    <string name="clear_cache">缓存清理</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="loading">加载中…</string>
    <string name="begin">起</string>
    <string name="end">终</string>
    <string name="set_off">出发</string>
    <string name="arrivals">到达</string>
    <string name="share_app">分享给好友</string>
    <string name="scan_and_download">扫码下载</string>
    <string name="reverse_bus_line">切换方向</string>
    <string name="reverse_success">切换成功</string>
    <string name="tips">温馨提示</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="right_away">马上</string>
    <string name="kilometers">公里</string>
    <string name="meter">米</string>
    <string name="walking">步行</string>
    <string name="donate">支持我们</string>
    <string name="thank_you_for_donate">感谢您的支持</string>

    <string name="execute_success">操作成功</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_success_content">谢谢您的意见，我们一定会好好考虑的！</string>
    <string name="clear_cache_content">您的数据将会在地球上彻底消失</string>
    <string name="delete_history">删除历史</string>
    <string name="search_hint">搜索</string>
    <string name="searching">搜索中…</string>
    <string name="feedback_hint">您想跟我们说…</string>
    <string name="search_bus_hint"> 请输入路线，如：k1</string>
    <string name="slogan">愿每一次公交都与你同行</string>
    <string name="error_msg">服务器有点抽风</string>
    <string name="auto_refresh_switch_on">打开自动刷新</string>
    <string name="already_switch_on_auto_refresh">已为您打开自动刷新</string>
    <string name="auto_refresh_switch_off">关闭自动刷新</string>
    <string name="already_switch_off_auto_refresh">已为您关闭自动刷新</string>
    <string name="contact_me">联系作者：huzhenjie.dev@gmail.com</string>
    <string name="goto_app_store_to_update">请前往应用市场更新</string>
    <string name="new_ver_already">很棒！您已经是最新版本啦！</string>
    <string name="hold_on">稍后再说</string>
    <string name="update_now">立即更新</string>
    <string name="bus_line_to">%1$s 开往 %2$s</string>
    <string name="bus_line_to_2">%1$s  开往  %2$s</string>
    <string name="price_tip">票价：%1$s 元，营运时间：%2$s ～ %3$s</string>
    <string name="del_bus_line_tip">确定删除 "%1$s 开往 %2$s" ？</string>
    <string name="search_result_count">共搜出 %1$d 条结果</string>
    <string name="route_start_hint">请输入起点站，如：香洲</string>
    <string name="route_end_hint">请输入终点站，如：拱北</string>
    <string name="scan_pay">扫码支付</string>
    <string name="scan_pay_open_fail">应用打开失败</string>
    <string name="wechat_bus_code">微信乘车码</string>
    <string name="alipay_bus_code">支付宝乘车码</string>
    <string name="complaint_setting_item">投诉/失物认领</string>
    <string name="complaint_tip">请拨打珠海公交服务热线：0756–2650123</string>
</resources>
