<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimaryDark">

            <ImageButton
                android:id="@+id/left"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@null"
                android:contentDescription="@null"
                android:onClick="back"
                app:srcCompat="@drawable/ic_return_white_24dp" />

            <TextView
                android:id="@+id/title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/left"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="@color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@mipmap/ic_launcher"
            android:drawablePadding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/blue_gray_900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />

        <Button
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ver"
            android:layout_marginTop="16dp"
            android:onClick="donate"
            android:text="@string/donate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="sendEmail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/contact_me"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>
</layout>