<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@null"
                android:contentDescription="@null"
                android:onClick="back"
                app:srcCompat="@drawable/ic_return_white_24dp" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textColor="@color/white" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/white"
                    android:gravity="start"
                    android:hint="@string/feedback_hint"
                    android:minLines="5"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/blue_gray_900"
                    android:textColorHint="@color/blue_gray_400" />

                <TextView
                    style="@style/Button"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="feedback"
                    android:text="@string/confirm" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>