<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_c08_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    app:srcCompat="@drawable/ic_order_color_primary_dark_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/start"
                        style="@style/RouteFragmentSearchView"
                        android:hint="@string/route_start_hint" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/blue_gray_400" />

                    <TextView
                        android:id="@+id/end"
                        style="@style/RouteFragmentSearchView"
                        android:hint="@string/route_end_hint" />
                </LinearLayout>

                <TextView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:text="@string/search_hint"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>
</layout>